# fortran-project-template

./: .editorconfig  .fortls  .fprettify.rc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ford.md  fpm.rsp  fpm.toml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.f90
docs/: MIGRATION.md  PROFILING.md  STYLE_GUIDE.md  TOOLING.md  VSCODE.md
profiling/: template_mpi.json
src/: first_steps.f90
test/: check.f90
