[project]
name = "fortran-project-template"
version = "2024.0.1"
dependencies = ["fpm", "ford", "graphviz"]
requires-python = ">=3.8"
authors = [
  { name = "Your name", email = "your@email.com" },
]
description = "Fortran Template Project"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["fortran", "modern fortran", "mpi", "vscode"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    "fortls",
    "fprettify",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/MatthAlex/fortran-project-template"
Documentation = "https://github.com/MatthAlex/fortran-project-template/README.md"
Repository = "https://github.com/MatthAlex/fortran-project-template"
"Bug Tracker" = "https://github.com/MatthAlex/fortran-project-template/issues"
Changelog = "https://github.com/MatthAlex/fortran-project-template/master/CHANGELOG.md"
